<resources>
    <string name="app_name">BonovoRadio</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="volume">Volume</string>
    <string name="previous">Previous</string>
    <string name="frequency">Frequency</string>
    <string name="play.pause">Pause / Play</string>
    <string name="next">Next</string>
    <string name="seek.up">Seek Up</string>
    <string name="stop">Stop</string>
    <string name="seek.down">Seek Down</string>
</resources>
