<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:visibility="gone">

        <!-- Volume -->
        <ImageView
            android:id="@+id/iv_volume"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/volume"
            android:focusable="true"
            android:scaleType="center"
            android:src="@drawable/btn_volume" />

        <SeekBar
            android:id="@+id/seek_volume"
            android:focusable="true"
            android:layout_weight="2"
            android:layout_width="0dip"
            android:layout_height="match_parent" />
    </LinearLayout>

    <!-- Frequency -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_seekdn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_stop_bg"
                android:clickable="true"
                android:contentDescription="@string/seek.down"
                android:focusable="true"
                android:src="@drawable/btn_rw" />

            <ImageView
                android:id="@+id/iv_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dip"
                android:background="@drawable/sel_prev_bg"
                android:contentDescription="@string/previous"
                android:src="@drawable/sel_prev" />
            <!-- Tuner Stop -->
            <ImageView
                android:id="@+id/iv_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_stop_bg"
                android:clickable="true"
                android:contentDescription="@string/stop"
                android:focusable="true"
                android:scaleType="center"
                android:src="@drawable/power_on" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_freq"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:contentDescription="@string/frequency"
            android:gravity="top|center_horizontal"
            android:orientation="vertical"
            android:text="90.0"
            android:textColor="#32b5e5"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_paupla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_stop_bg"
                android:clickable="true"
                android:contentDescription="@string/play.pause"
                android:focusable="true"
                android:src="@drawable/btn_play" />

            <TextView
                android:id="@+id/tv_ptyn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="RDS PT"
                android:gravity="center_vertical|center_horizontal"
                android:singleLine="true"
                android:textColor="#ffa3a3a3"
                android:textSize="12dip"
                android:textStyle="normal"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/iv_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_prev_bg"
                android:contentDescription="@string/next"
                android:src="@drawable/sel_next" />

            <ImageView
                android:id="@+id/iv_seekup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_stop_bg"
                android:clickable="true"
                android:contentDescription="@string/seek.up"
                android:focusable="true"
                android:src="@drawable/btn_ff" />
        </LinearLayout>
    </LinearLayout>

    <!-- Phase / CDown -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_svc_count"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dip"
            android:layout_weight="1"
            android:contentDescription="CDown"
            android:gravity="center_vertical|left"
            android:singleLine="true"
            android:text="count"
            android:textColor="#ffa3a3a3"
            android:textSize="14dip"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_svc_phase"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="14"
            android:contentDescription="Phase"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:text="phase"
            android:textColor="#ffa3a3a3"
            android:textSize="14dip"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_svc_cdown"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="4dip"
            android:layout_weight="1"
            android:contentDescription="CDown"
            android:gravity="center_vertical|right"
            android:singleLine="true"
            android:text="cdown"
            android:textColor="#ffa3a3a3"
            android:textSize="14dip"
            android:textStyle="normal" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="18"
        android:orientation="horizontal">

        <!-- Clock -->
        <TextView
            android:id="@+id/clock_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:textSize="30sp"
            android:text="00:00"
            android:visibility="gone" />
        <!-- presets left -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/fr_preset_0"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="Preset 0"
                android:scaleType="center">

                <TextView
                    android:id="@+id/tv_preset_0"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:scaleType="center"
                    android:text=""
                    android:textSize="20.0dp" />

                <ImageButton
                    android:id="@+id/ib_preset_0"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="#00000000"
                    android:scaleType="center"
                    android:src="@drawable/btn_preset" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fr_preset_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="Preset 1"
                android:scaleType="center">

                <TextView
                    android:id="@+id/tv_preset_1"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:scaleType="center"
                    android:text=""
                    android:textSize="20.0dp" />

                <ImageButton
                    android:id="@+id/ib_preset_1"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="#00000000"
                    android:scaleType="center"
                    android:src="@drawable/btn_preset" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fr_preset_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="Preset 2"
                android:scaleType="center">

                <TextView
                    android:id="@+id/tv_preset_2"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:scaleType="center"
                    android:text=""
                    android:textSize="20.0dp" />

                <ImageButton
                    android:id="@+id/ib_preset_2"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="#00000000"
                    android:scaleType="center"
                    android:src="@drawable/btn_preset" />
            </FrameLayout>

        </LinearLayout>

        <!-- Frequency dial -->
        <RelativeLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_margin="20sp">
        <ImageView android:id="@+id/frequency_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:contentDescription="Frequency"
            android:src="@drawable/dial_frequency" />
        <ImageView android:id="@+id/frequency_needle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:contentDescription="Needle"
            android:src="@drawable/freq_dial_needle" />
        </RelativeLayout>

        <!-- presets right -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/fr_preset_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="Preset 5"
                android:scaleType="center">

                <TextView
                    android:id="@+id/tv_preset_3"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:scaleType="center"
                    android:text=""
                    android:textSize="20.0dp" />

                <ImageButton
                    android:id="@+id/ib_preset_3"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="#00000000"
                    android:scaleType="center"
                    android:src="@drawable/btn_preset" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fr_preset_4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="Preset 4"
                android:scaleType="center">

                <TextView
                    android:id="@+id/tv_preset_4"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:scaleType="center"
                    android:text=""
                    android:textSize="20.0dp" />

                <ImageButton
                    android:id="@+id/ib_preset_4"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="#00000000"
                    android:scaleType="center"
                    android:src="@drawable/btn_preset" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fr_preset_5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="Preset 3"
                android:scaleType="center">

                <TextView
                    android:id="@+id/tv_preset_5"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:scaleType="center"
                    android:text=""
                    android:textSize="20.0dp" />

                <ImageButton
                    android:id="@+id/ib_preset_5"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="#00000000"
                    android:scaleType="center"
                    android:src="@drawable/btn_preset" />
            </FrameLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>

